--- a/trunk/Auslink/Auslink.Web/Auslink.Web.csproj
+++ b/trunk/Auslink/Auslink.Web/Auslink.Web.csproj
@@ -255,6 +255,7 @@
     <Content Include="Views\PropertyPortfolio\Albury.cshtml" />
     <Content Include="Views\PropertyPortfolio\Bowen.cshtml" />
     <Content Include="Views\PropertyPortfolio\Port-Augusta.cshtml" />
+    <Content Include="Views\PropertyPortfolio\Goondiwindi.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
