--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 *.pydevproject
 .project
 .metadata
-bin/
+
 tmp/
 *.tmp
 *.bak
@@ -30,7 +30,7 @@ local.properties
 
 # My Ignores
 *.publishsettings
-*.Release.config
+
 
 #################
 ## Visual Studio
@@ -45,8 +45,8 @@ local.properties
 *.sln.docstates
 
 # Build results
-[Dd]ebug/
-[Rr]elease/
+[Dd]ebug/*
+[Rr]elease/*
 *_i.c
 *_p.c
 *.ilk
@@ -143,7 +143,7 @@ dist
 build
 eggs
 parts
-bin
+
 var
 sdist
 develop-eggs
