--- a/trunk/Auslink/Auslink.Web.New/Auslink.Web.New.csproj
+++ b/trunk/Auslink/Auslink.Web.New/Auslink.Web.New.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Models\Login.cs" />
     <Compile Include="Models\PageViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\MemberProvider.cs" />
     <Compile Include="Providers\LoginProvider.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
